==> 85hzc/ask_433/stm32f1_cube/Drivers/Fat_spi/SPI_SD_driver.c <==
#include "stm32f1xx.h"
#include "SPI_SD_driver.h"
#include "diskio.h"
#include "delay.h"

void SPI_Configuration(void)
{
    GPIO_InitTypeDef GPIO_InitStructure;

    SPI_GPIO_Hard_Init();

    //////SPI模块配置//////
    //一开始SD初始化阶段，SPI时钟频率必须<400K
    SD_CS_DISABLE();
/*
    //TP_CS 失能
    GPIO_InitStructure.Pin = GPIO_PIN_12;
    GPIO_InitStructure.Mode = GPIO_MODE_OUTPUT_PP;
    HAL_GPIO_Init(GPIOB, &GPIO_InitStructure);
    GPIO_SetBits(GPIOB, GPIO_PIN_12);
    
    //Flash 失能
    GPIO_InitStructure.Pin = GPIO_PIN_11;
    GPIO_InitStructure.Mode = GPIO_MODE_OUTPUT_PP;
    HAL_GPIO_Init(GPIOG, &GPIO_InitStructure);
    GPIO_SetBits(GPIOG, GPIO_PIN_11);
    */
/*
    SPI_InitStructure.SPI_Direction = SPI_Direction_2Lines_FullDuplex;
    SPI_InitStructure.SPI_Mode = SPI_Mode_Master;
    SPI_InitStructure.SPI_DataSize = SPI_DataSize_8b;
    SPI_InitStructure.SPI_CPOL = SPI_CPOL_High;
    SPI_InitStructure.SPI_CPHA = SPI_CPHA_2Edge;
    SPI_InitStructure.SPI_NSS = SPI_NSS_Soft;
    SPI_InitStructure.SPI_BaudRatePrescaler = SPI_BaudRatePrescaler_256;
    SPI_InitStructure.SPI_FirstBit = SPI_FirstBit_MSB;
    SPI_InitStructure.SPI_CRCPolynomial = 7;
    SPI_Init(SPI2, &SPI_InitStructure);
*/
    MX_SPI2_Init();
    __HAL_SPI_ENABLE(&hspi2);
    return;
}

void SPI_SetSpeed(u8 SpeedSet)
{
    hspi2.Instance = SPI2;
    hspi2.Init.Mode = SPI_MODE_MASTER;//主模式
    hspi2.Init.Direction = SPI_DIRECTION_2LINES;//全双工
    hspi2.Init.DataSize = SPI_DATASIZE_8BIT;//数据位为8位
    hspi2.Init.CLKPolarity = SPI_POLARITY_HIGH;//CPOL=0,low
    hspi2.Init.CLKPhase = SPI_PHASE_2EDGE;//CPHA为数据线的第一个变化沿
    hspi2.Init.NSS = SPI_NSS_SOFT;//软件控制NSS

    //如果速度设置输入0，则低速模式，非0则高速模式
    if(SpeedSet==SPI_SPEED_LOW)
    {
        hspi2.Init.BaudRatePrescaler = SPI_BAUDRATEPRESCALER_256;
    }
    else
    {
        hspi2.Init.BaudRatePrescaler = SPI_BAUDRATEPRESCALER_4;
    }
    //moon.mp3: 4707774 Byte size 目标文件 设为buffer[512]     
    //speed:实验测试数据，最大速度 392314 Byte/S，
    //Prescaler_128, 59592 Byte/S
    //Prescaler_64, 104617 Byte/S
    //Prescaler_32, 168134 Byte/S    162337 Byte/S
    //Prescaler_16, 261543 Byte/S    247777 Byte/S
    //Prescaler_8,  313851 Byte/S    336269 Byte/S
    //Prescaler_4,  392314 Byte/S    392314 Byte/S
    //Prescaler_2,  392314 Byte/S

    hspi2.Init.FirstBit = SPI_FIRSTBIT_MSB;//最高位先发送
    hspi2.Init.TIMode = SPI_TIMODE_DISABLE;//TIMODE模式关闭
    hspi2.Init.CRCCalculation = SPI_CRCCALCULATION_DISABLE;//CRC关闭
    hspi2.Init.CRCPolynomial = 7;//默认值，无效

    HAL_SPI_Init(&hspi2);
    __HAL_SPI_ENABLE(&hspi2);

    return;
}

u8 SPI_ReadWriteByte(u8 TxData)
{
    HAL_StatusTypeDef res;
    u8 RxData = 0;
    //SPI_HandleTypeDef hspi;
/*
    //等待发送缓冲区空
    while(SPI_I2S_GetFlagStatus(SPI2, SPI_I2S_FLAG_TXE) == RESET);
    //发一个字节
    SPI_I2S_SendData(SPI2, TxData);

    //等待数据接收
    while(SPI_I2S_GetFlagStatus(SPI2, SPI_I2S_FLAG_RXNE) == RESET);
    //取数据
    RxData = SPI_I2S_ReceiveData(SPI2);
*/
#if 1

    //HAL_SPI_TransmitReceive(&SpiHandle, (uint8_t*)aTxBuffer, (uint8_t *)aRxBuffer, BUFFERSIZE, 5000);
    HAL_SPI_TransmitReceive(&hspi2, &TxData, &RxData, 1, 5000);
#else
    //hspi.Instance = SPI2;
    res = HAL_SPI_Transmit(&hspi2, &TxData, 1, 0xffff);
    //printf("%s[%d]res=%d\r\n",__FUNCTION__,__LINE__,res);
    res = HAL_SPI_Receive(&hspi2, &RxData, 1, 0xffff);
    //printf("%s[%d]res=%d\r\n",__FUNCTION__,__LINE__,res);
#endif
    return (u8)RxData;
}
